[package]
name = "tokio-toy"
version = "0.1.0"
authors = ["german"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.10.7", default-features = false }
bytes = "0.5.6"