[package]
name = "jenkins-trace"
version = "0.1.0"
authors = ["german"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"
tokio = { version = "0.2", features = ["full"] }
bytes = "0.5.6"
reqwest = { version = "0.10.7", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }

[features]
default = []
tls = ["reqwest/default-tls"]
