[package]
name = "jenkins-trace"
version = "0.1.0"
authors = ["german"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.6"
reqwest = { version = "0.10.7", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# standalone tools
tokio = { version = "0.2", features = ["full"] }
structopt = "0.3.15"
url = "2.1.1"

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }

[features]
default = []
tls = ["reqwest/default-tls"]
